--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,7 @@ FiXme consists of the files listed in the file `README.md'.
 
 * Version 4.5
 ** Revamp of the AUCTeX support
-with help from Arash Esbati.
+with help from Arash Esbati and Ikumi Keita.
 
 * Version 4.4
 ** Handle existing yet empty lox files properly
