--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1501,7 +1501,8 @@
 %
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
-% \item[v4.5] Revamp of the \auctex support, with help from Arash Esbati.
+% \item[v4.5] Revamp of the \auctex support, with help from Arash Esbati and
+%   Ikumi Keita.
 % \item[v4.4] Handle existing yet empty lox file properly, meaning don't
 %   actually typeset an empty list of corrections.\\
 %   Don't update the \texttt{lox} file in final mode, avoiding potential
