--- a/THANKS
+++ b/THANKS
@@ -21,12 +21,13 @@ FiXme consists of the files listed in the file `README.md'.
 ** The following persons have contributed code, bug reports, localization,
 ** suggestions etc.:
 
-Ikumi Keita, Arash Esbati, Kreuvf, Dirk Surmann, Victor Porton, Joseph Wright,
-Lars Madsen, Norman Gray, Sébastien Mengin, Michael Kubovy, Mark Edgington,
-Rasmus Villemoes, Philipp Stephani, Will Robertson, Jochen Wuttke, Jens Remus,
-Brian van den Broek, Stefan Mann, Marcel Maretic, Claude Lacoursière, Arnold
-Beckmann, Akim Demaille, Kim Rud Bille, Knut Lickert, Kasper B. Graversen,
-Augustín Martín, Ulf Jaenicke-Roessler, Riccardo Murri, Harald Harders.
+Frank Mittelbach, Ikumi Keita, Arash Esbati, Kreuvf, Dirk Surmann, Victor
+Porton, Joseph Wright, Lars Madsen, Norman Gray, Sébastien Mengin, Michael
+Kubovy, Mark Edgington, Rasmus Villemoes, Philipp Stephani, Will Robertson,
+Jochen Wuttke, Jens Remus, Brian van den Broek, Stefan Mann, Marcel Maretic,
+Claude Lacoursière, Arnold Beckmann, Akim Demaille, Kim Rud Bille, Knut
+Lickert, Kasper B. Graversen, Augustín Martín, Ulf Jaenicke-Roessler, Riccardo
+Murri, Harald Harders.
 
 
 
