--- a/fixme.dtx
+++ b/fixme.dtx
@@ -62,7 +62,7 @@
 %
 % \fi
 %
-% \CheckSum{1719}
+% \CheckSum{1720}
 % \GetFileInfo{fixme.inc}
 %% \CharacterTable
 %%  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
@@ -1501,8 +1501,10 @@
 %
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
-% \item[v4.5] Revamp of the \auctex support, with help from Arash Esbati and
-%   Ikumi Keita.
+% \item[v4.5] Fix spurious space at the end of environments contents, reported
+%   by Frank Mittelbach.\\
+%   Revamp of the \auctex support, with help from Arash Esbati and Ikumi
+%   Keita.
 % \item[v4.4] Handle existing yet empty lox file properly, meaning don't
 %   actually typeset an empty list of corrections.\\
 %   Don't update the \texttt{lox} file in final mode, avoiding potential
@@ -2922,7 +2924,7 @@
 \def\@@@@fxbeginenv@final#1{\comment}
 \def\@@@@fxbeginenv@draft#1{\@fxenvlayout@begin{#1}{\cmdfx@note@author}}
 \def\@fxendenv@final#1{\endcomment}
-\def\@fxendenv@draft#1{\@fxenvlayout@end{#1}{\cmdfx@note@author}}
+\def\@fxendenv@draft#1{\unskip\@fxenvlayout@end{#1}{\cmdfx@note@author}}
 
 %    \end{macrocode}
 % \end{macro}
