Update copyright headers and release date.

--- a/THANKS
+++ b/THANKS
@@ -1,7 +1,7 @@
 				 THANK YOU!
 
 
-Copyright (C) 2007, 2009, 2013, 2017 Didier Verna
+Copyright (C) 2007, 2009, 2013, 2017, 2018 Didier Verna
 
 Author: Didier Verna <didier@didierverna.net>
 
