--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2,7 +2,7 @@
 %
 % fixme.dtx --- docTeX file for FiXme
 %
-% Copyright (C) 1998-2002, 2004-2007, 2009, 2013, 2017 Didier Verna
+% Copyright (C) 1998-2002, 2004-2007, 2009, 2013, 2017, 2018 Didier Verna
 %
 % Author: Didier Verna <didier@didierverna.net>
 %
@@ -121,7 +121,7 @@
 %
 % \newcommand\fx{\fixmelogo\xspace}
 % \newcommand\packagecopyright{%
-%   Copyright \copyright{} 1998--2002, 2004--2007, 2009, 2013, 2017 Didier Verna}
+%   Copyright \copyright{} 1998--2002, 2004--2007, 2009, 2013, 2017, 2018 Didier Verna}
 %
 % \pagestyle{mystyle}
 % \newcommand\fxmarkright{%
@@ -1598,7 +1598,7 @@
 %<fixme>
 \NeedsTeXFormat{LaTeX2e}
 %<*header>
-\ProvidesPackage{fixme}[2017/03/19 v4.4 Collaborative annotations for LaTeX2e]
+\ProvidesPackage{fixme}[2018/12/21 v4.4 Collaborative annotations for LaTeX2e]
 
 %</header>
 %    \end{macrocode}
