--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,8 @@ FiXme consists of the files listed in the file `README.md'.
 
 
 * Version 4.5
+** Fix PDF signature layouts not working
+reported by Soeren Wolfers.
 ** Fix spurious space at the end of environments contents
 reported by Frank Mittelbach.
 ** Revamp of the AUCTeX support
