--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2,7 +2,7 @@
 %
 % fixme.dtx --- docTeX file for FiXme
 %
-% Copyright (C) 1998-2002, 2004-2007, 2009, 2013, 2017, 2018 Didier Verna
+% Copyright (C) 1998-2002, 2004-2007, 2009, 2013, 2017-2019 Didier Verna
 %
 % Author: Didier Verna <didier@didierverna.net>
 %
@@ -121,7 +121,7 @@
 %
 % \newcommand\fx{\fixmelogo\xspace}
 % \newcommand\packagecopyright{%
-%   Copyright \copyright{} 1998--2002, 2004--2007, 2009, 2013, 2017, 2018 Didier Verna}
+%   Copyright \copyright{} 1998--2002, 2004--2007, 2009, 2013, 2017-2019 Didier Verna}
 %
 % \pagestyle{mystyle}
 % \newcommand\fxmarkright{%
