Define the extension-level interfaces for env and target layout options.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -62,7 +62,7 @@
 %
 % \fi
 %
-% \CheckSum{1767}
+% \CheckSum{1769}
 % \GetFileInfo{fixme.inc}
 %% \CharacterTable
 %%  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
@@ -2078,7 +2078,6 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
-%
 % \begin{macro}[noindex]{\FXDefineLayout...Key}
 % \begin{macro}[noprint]{\FXDefineLayoutKey}
 % \begin{macro}[noprint]{\FXDefineLayoutCmdKey}
@@ -2405,6 +2404,23 @@
 
 %    \end{macrocode}
 % \end{macro}
+% \begin{macro}[noindex]{\FXDefineEnvLayout...Key}
+% \begin{macro}[noprint]{\FXDefineEnvLayoutKey}
+% \begin{macro}[noprint]{\FXDefineEnvLayoutCmdKey}
+% \begin{macro}[noprint]{\FXDefineEnvLayoutChoiceKey}
+% \begin{macro}[noprint]{\FXDefineEnvLayoutVoidKey}
+% \begin{macro}[noprint]{\FXDefineEnvLayoutBoolKey}
+% The extension-level option creation interface:
+%    \begin{macrocode}
+\@fxdefineoptioninterface{envlayout}{EnvLayout}
+
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 %
 % \subsubsection{Built-in layouts}
 % \paragraph{Plain}
@@ -2545,6 +2561,23 @@
       Otherwise, you must choose another name.}}}
 
 %    \end{macrocode}
+% \end{macro}
+% \begin{macro}[noindex]{\FXDefineTargetLayout...Key}
+% \begin{macro}[noprint]{\FXDefineTargetLayoutKey}
+% \begin{macro}[noprint]{\FXDefineTargetLayoutCmdKey}
+% \begin{macro}[noprint]{\FXDefineTargetLayoutChoiceKey}
+% \begin{macro}[noprint]{\FXDefineTargetLayoutVoidKey}
+% \begin{macro}[noprint]{\FXDefineTargetLayoutBoolKey}
+% The extension-level option creation interface:
+%    \begin{macrocode}
+\@fxdefineoptioninterface{targetlayout}{TargetLayout}
+
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 %
 % \subsubsection{Built-in layouts}
