--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@ the index because of special caracters (! etc). Also, maybe mention in the doc
 problems with commands like \footenotesize going into the index, and the use
 of \protect.
 
-* Voir PGF/TikZ example: Todo notes| fauskes.net
+* See the todonotes packageand PGF/TikZ example: Todo notes| fauskes.net
   http://www.fauskes.net/pgftikzexamples/todo-notes/
 
 * Will Robertson <wspr81@gmail.com> wrote:
@@ -32,8 +32,6 @@ nice to have local lists of fixmes and stuff...
 * Internationalize the FXLog* messages
   1/ either by adding fxlog*prefix macros (dependent on the language)
   2/ or by finding a way to adapt fx*prefix macros for tty output (?!)
-
-* See the todonotes package
 
 * See if we want more than the silent option. For instance
   silent={log,tty,summary,all}.
