Slightly rephrase the 4.5 History section.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1579,12 +1579,12 @@
 %
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
-% \item[v4.5] Fix PDF signature layouts not working, reported by Soeren
+% \item[v4.5] Revamp the \auctex support, with help from Arash Esbati and
+%   Ikumi Keita.\\
+%   Fix PDF signature layouts not working anymore, reported by Soeren
 %   Wolfers.\\
 %   Fix spurious space at the end of environments contents, reported
-%   by Frank Mittelbach.\\
-%   Revamp of the \auctex support, with help from Arash Esbati and Ikumi
-%   Keita.
+%   by Frank Mittelbach.
 % \item[v4.4] Handle existing yet empty lox file properly, meaning don't
 %   actually typeset an empty list of corrections.\\
 %   Don't update the \texttt{lox} file in final mode, avoiding potential
