--- a/NEWS
+++ b/NEWS
@@ -17,12 +17,12 @@ FiXme consists of the files listed in the file `README.md'.
 
 
 * Version 4.5
-** Fix PDF signature layouts not working
+** Revamp the AUCTeX support
+with help from Arash Esbati and Ikumi Keita.
+** Fix PDF signature layouts not working anymore
 reported by Soeren Wolfers.
 ** Fix spurious space at the end of environments contents
 reported by Frank Mittelbach.
-** Revamp of the AUCTeX support
-with help from Arash Esbati and Ikumi Keita.
 
 * Version 4.4
 ** Handle existing yet empty lox files properly
