Advertise the extension-level option creation interface in History/NEWS.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1579,7 +1579,8 @@
 %
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
-% \item[v4.5] Revamp the \auctex support, with help from Arash Esbati and
+% \item[v4.5] Public interface for extending \fx with new key/value options.\\
+%   Revamp the \auctex support, with help from Arash Esbati and
 %   Ikumi Keita.\\
 %   Fix PDF signature layouts not working anymore, reported by Soeren
 %   Wolfers.\\
