--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 			     WHAT'S NEW IN FIXME
 
 
-Copyright (C) 1998-2002, 2004-2007, 2009, 2013, 2017 Didier Verna
+Copyright (C) 1998-2002, 2004-2007, 2009, 2013, 2017-2019 Didier Verna
 
 Author: Didier Verna <didier@didierverna.net>
 
@@ -17,6 +17,7 @@ FiXme consists of the files listed in the file `README.md'.
 
 
 * Version 4.5
+** Public interface for extending FiXme with new key/value options.
 ** Revamp the AUCTeX support
 with help from Arash Esbati and Ikumi Keita.
 ** Fix PDF signature layouts not working anymore
